Patch mio and h2 crates to current git master head.
Signed-off-by: Brian Smith <brian@briansmith.org>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ members = [
   "proxy/futures-mpsc-lossy",
   "proxy/router",
 ]
+
+[patch.crates-io]
+h2 = { git = "https://github.com/carllerche/h2" }
+mio = { git = "https://github.com/carllerche/mio" }
